# hrkgame

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  configure  hrkconfig.cfg  recording.hrkrec.tcl  recording.hrkrec.ttyrec
cmake/: hrkconfig.cmake  project-config.cmake.in
hrkconfig.d/: emacs.tcl
src/: CMakeLists.txt  hrkaux.c  hrkaux.h  hrkgame-base.cc  hrkgame-base.hh  hrkgame-board.cc  hrkgame-board.hh  hrkgame-board.tcc  hrkgame-tictactoe.cc  hrkgame-tictactoe.hh  hrkgame.cc  hrkgame.hh  main.cc
